# mvr

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  qa_report.md  render.yaml
.github/workflows/: ci.yml  pr-checks.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compute_checksums.ps1
backend/.cargo/: audit.toml
backend/examples/: countries_seed.json  fix_migration_checksums.rs  fix_scholarships.rs  hash_password.rs  seed_admin.rs  seed_content.rs  seed_countries.rs  seed_universities.rs  universities_seed.json
backend/migrations/: 20250101000001_create_users.sql  20250101000002_create_leads.sql  20250101000003_create_blogs.sql  20250101000004_create_universities.sql  20250101000005_create_testimonials.sql  20250101000006_create_scholarships.sql  20250101000007_create_countries.sql  20250101000008_create_newsletter_subscribers.sql  20250101000009_add_blog_category_readtime.sql  20250101000009_fix_migration_checksums.sql  20250101000010_fix_migration_checksums_v2.sql  20250101000010_fix_scholarships_missing_columns.sql  20250101000011_extend_universities.sql  20250619000001_add_totp_to_users.sql  20250622000001_ensure_testimonials_table.sql  20250629100000_remove_editor_role.sql
backend/src/: main.rs
backend/src/config/: env.rs
backend/src/db/: connection.rs  migrations.rs  mod.rs  seed.rs
backend/src/handlers/: auth_handler.rs  blog_handler.rs  lead_handler.rs  mod.rs  university_handler.rs
backend/src/middleware/: auth_middleware.rs  cors_middleware.rs  mod.rs  rate_limit_middleware.rs
backend/src/models/: blog.rs  country.rs  lead.rs  mod.rs  newsletter.rs  scholarship.rs  testimonial.rs  university.rs  user.rs
backend/src/repositories/: auth_repository.rs  blog_repository.rs  country_repository.rs  lead_repository.rs  mod.rs  newsletter_repository.rs  scholarship_repository.rs  testimonial_repository.rs  university_repository.rs
backend/src/routes/: admin.rs  auth.rs  blogs.rs  cloudinary.rs  contact.rs  countries.rs  leads.rs  mod.rs  newsletter.rs  scholarships.rs  sop.rs  testimonials.rs  universities.rs  users.rs
backend/src/services/: admin_service.rs  auth_service.rs  blog_service.rs  cloudinary_service.rs  contact_service.rs  country_service.rs  email_service.rs  lead_service.rs  mod.rs  newsletter_service.rs  sop_service.rs  university_service.rs
backend/src/utils/: errors.rs  json_extractor.rs  jwt.rs  mod.rs  password.rs  response.rs  token_blocklist.rs  totp.rs  validators.rs
frontend/: .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  test.js  vercel.json
frontend/public/: site.webmanifest
frontend/scripts/: cleanup-data-pass2.py  cleanup-data.py  extract-blogs.py  generate-favicons.mjs  qa-api-smoke.mjs  qa-content-smoke.mjs  qa-route-smoke.mjs  sync-gallery-images.mjs  verify-gallery-images.mjs
frontend/src/: middleware.ts
infrastructure/nginx/: mvrconsultants.com.conf  mvrconsultants.org.conf
nginx/: Dockerfile  nginx.conf  nginx.dev.conf
supabase/: .gitignore  README.md  reset_and_seed.sql
(+147 files in other folders)
