[package]
name = "mvr-backend"
version = "0.1.0"
edition = "2024"
authors = ["MVR Consultants Engineering Team"]
description = "MVR Consultants REST API — Rust + Axum + Supabase PostgreSQL"

[[bin]]
name = "mvr-backend"
path = "src/main.rs"

[dependencies]
# ---------------------------------------------------------------------------
# Web Framework + Async Runtime
# ---------------------------------------------------------------------------
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = [
    "cors",
    "trace",
    "compression-gzip",
    "request-id",
    "timeout",
] }

# ---------------------------------------------------------------------------
# Database — SQLx with PostgreSQL + Supabase
# ---------------------------------------------------------------------------
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }

# ---------------------------------------------------------------------------
# Serialization
# ---------------------------------------------------------------------------
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ---------------------------------------------------------------------------
# Authentication
# ---------------------------------------------------------------------------
jsonwebtoken = "9"
argon2 = "0.5"

# ---------------------------------------------------------------------------
# Utilities
# ---------------------------------------------------------------------------
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
validator = { version = "0.18", features = ["derive"] }

# ---------------------------------------------------------------------------
# Logging & Tracing
# ---------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# ---------------------------------------------------------------------------
# HTTP Client (for Cloudinary, Resend API calls)
# ---------------------------------------------------------------------------
reqwest = { version = "0.12", features = ["json", "multipart"] }

# ---------------------------------------------------------------------------
# Email — Resend
# ---------------------------------------------------------------------------
# Using reqwest to call Resend REST API directly (no official Rust SDK needed)

# ---------------------------------------------------------------------------
# Random / Security
# ---------------------------------------------------------------------------
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
